<package>
  <name>receive_xsens</name>
  <version>0.0.1</version>
  <description>ROS driver for Xsens MTi-10 and MTi-100 series motion trackers</description>
  <maintainer email="zhangji@cmu.edu">Ji Zhang</maintainer>
  <url>http://wiki.ros.org/receive_xsens</url>
  <license>BSD</license>

  <author>Ji Zhang</author>
  <author>Silvio Maeta</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
